--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -5,9 +6,15 @@
 }
 body{
     background-color: #000000;
-    height: 100vh; 
-    font-family: "Jersey 25", sans-serif;
+    height: 100%; 
+    font-family: "Sedan SC", serif;
+
+   
 }
+a{
+    text-decoration: none;
+}
+
 .interface{
     max-width: 1280px;
     margin: 0 auto;
@@ -16,16 +23,20 @@ body{
 }
 
 header{
-    font-family: "Jersey 25", sans-serif;
+    font-family: "Sedan SC", serif;
+    
 }
 header > .interface{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin: 0 auto;
+    padding: 5px;
 }
 a >.logo{
     width: 150px;
     height: 150px;
+    
 }
 .menu-desktop ul {
     display: flex;
@@ -33,7 +44,7 @@ a >.logo{
 .menu-desktop ul li{
     list-style: none;
     margin: 0 0 0 20px;
-
+    
 }
 .menu-desktop ul li a{
     text-decoration: none;
@@ -49,29 +60,121 @@ a >.logo{
     border-bottom: 1px solid #510273;
     transition: all 0.5s ease-out;  
     filter: brightness(2.5);  
-    box-shadow: 0px 0px 20px #4703A6 ;
+    box-shadow: 0px 2px 5px #4703A6 ;
     padding: 10px;
     border-radius: 10%;
 }
-header .btn-contato button{
-    padding: 10px 40px;
+    
+/*Estilização Sobre*/
+
+#Sobre{
+    color: #ffffffd8;
+    display: flex;
+    flex-direction:column;
+    text-align: center;
+    margin: 20px;
+    letter-spacing: 2px;
+    line-height: 30px;
     font-size: 18px;
-    font-weight: 600;
-    background-color: #4703A6;
-    border:1px solid #4703A6;
+    align-items:center;
+    justify-content: center;
+    
 
 }
-.btn-contato button{
-    color: #ffffff;
-    font-size: 1.5rem;
-    font-family: "Jersey 25", sans-serif;
-    text-decoration: none;
-    cursor:pointer;
+/*Estilização do Rodape*/
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #ffffffd8;
+    width: 100%;
+    height: 10%;
 }
-.btn-contato:hover{
-    box-shadow: 0px 0px 20px #4703A6 ;
-    padding: 4px;
-    border-radius: 10%;
-    transition: all 0.5s ease-out;  
-    filter: brightness(1.5);
+.formacao-list{
+    list-style: none;
+    font-size: 20px;
+    margin: 20px;
+    
+   
+}
+/* estilização Quem sou*/
+.quemSou{
+    display: flex;
+    flex-direction: column;
+    transition: all 1s ease-in;
+    box-shadow: 0px 0px 20px 1px #4703A6;
+    padding: 5px;
+    border-radius: 2%;
+    line-height: 30px;
+    text-align: center;
+    color: #ffffff8a;
+    margin: 30px;
+}
+.foto-perfil{
+    width: 100%;
+}
+.content{
+    width: 25%;
+    height: 20%;
+}
+/* estilização Formacao*/
+.formacao{
+    color: #ffffffd8;
+    display: flex;
+    flex-direction:column;
+    text-align: center;
+    margin: 20px;
+    letter-spacing: 2px;
+    line-height: 35px;
+    font-size: 18px;
+    align-items:center;
+}
+/* estilização Formacao*/
+#Formacao{
+    filter: brightness(2.5);
+
+   
+}
+
+.logo-fundo{
+    width: 10%;
+    height: 10%;
+    margin: 0 auto;
+    
+}
+.linkPort{
+    color: #4703A6;
+}
+.linkPort:hover{
+    padding: 3px;
+    color: #ffffffd8;
+    transition: all 1s ease-in;
+    border: 1px solid #4703A6;
+    box-shadow: 0px 0px 5px 1px #4703A6;
+    border-radius: 7px;
+}
+
+#contato-formulario {
+    margin: 20px;
+    line-height: 20px;
+    padding: 5px;
+    color: #ffffffd8;
+    transition: all 1s linear;
+    border: 1px solid #4703A6;
+    box-shadow: 0px 0px 5px 1px #4703A6;
+    border-radius: 7px;
+}
+.enviar{
+    color: #000000;
+    padding: 3px;
+}
+.enviar:hover{
+    color: #000000;
+    transition: all 1s ease-in;
+    border: 1px solid #4703A6;
+    box-shadow: 0px 0px 5px 1px #4703A6;
+    border-radius: 4px;
+    background-color: #ffffff;
+
 }
